feat(resilience): implement Sprint 5D Reliability, Resilience & Failure Recovery (290/290 tests passing)